feat(actions): implement trusted issuer & approver configuration closure (Sprint 10.2.2)
- Add freeze lifecycle and configuration validation to AuthorizationAuthorityRegistry and TrustedApproverRegistry
- Integrate security configuration into logistix-spring-boot-starter (LogistiXProperties and LogistiXAutoConfiguration)
- Auto-configure frozen authority/approver registries and ActionAuthorizationIssuer/ActionApprovalIssuer beans
- Add Spring Boot configuration tests and adversarial registry freeze tests (92/92 tests passing across all 14 modules)